--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "locomotive-scroll": "^4.1.4",
     "vue": "^3.2.41"
   },
   "devDependencies": {
