--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
@@ -18,7 +19,8 @@
     "locomotive-scroll": "^4.1.4",
     "swiper": "^9.0.2",
     "vue": "^3.2.41",
-    "vue-hooks": "^0.3.2"
+    "vue-hooks": "^0.3.2",
+    "vuetify": "^3.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
