--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jquery": "^3.6.3",
     "locomotive-scroll": "^4.1.4",
     "swiper": "^9.0.2",
+    "v-wave": "^1.5.0",
     "vue": "^3.2.41",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-hooks": "^0.3.2",
     "vuetify": "^3.1.9"
   },
